<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Class 12th AG JET notes</string>

    <!-- Auth Strings -->
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_subtitle">Sign in to continue your learning journey</string>
    <string name="create_account">Create Account</string>
    <string name="signup_subtitle">Start your learning journey today</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_up_here">Sign Up</string>
    <string name="login_here">Login</string>

    <!-- Home Strings -->
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="welcome_message">Ready to learn something new?</string>

    <!-- Menu Items -->
    <string name="my_courses">Notes</string>
    <string name="assignments">Assignments</string>
    <string name="videos">Videos</string>
    <string name="quiz">Quiz</string>
    <string name="schedule">Schedule</string>
    <string name="grades">Grades</string>
    <string name="jet_taiyari">JET Taiyari</string>
    <string name="library">Library</string>
    <string name="ai_teacher">AI Teacher</string>
    <string name="notes">Notes</string>
    <string name="feedback">Feedback</string>
    <string name="calendar">Calendar</string>
    <string name="live_class">Live Class</string>
    <string name="share">Share App</string>
    <string name="about">About Me</string>
    <string name="settings">Settings</string>

    <!-- Common -->
    <string name="loading">Loading…</string>
    <string name="error_occurred">An error occurred</string>
    <string name="try_again">Try Again</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>

    <!-- Validation Messages -->
    <string name="error_empty_email">Please enter your email</string>
    <string name="error_invalid_email">Please enter a valid email</string>
    <string name="error_empty_password">Please enter your password</string>
    <string name="error_short_password">Password must be at least 6 characters</string>
    <string name="error_empty_name">Please enter your name</string>
    <string name="error_passwords_dont_match">Passwords don\'t match</string>
    <string name="login_successful">Login successful</string>
    <string name="signup_successful">Sign up successful</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="back_button">Back</string>


    <!-- Firebase -->
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Content Descriptions -->
    <string name="banner_image">Banner Image</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="notification_icon">Notification</string>

    <!-- Common -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>